test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/2_modifier/storage/const/MISSING_CONST_INIT.t
@static_test { expect_message={ level="LEVEL_ERROR", id="MISSING_CONST_INIT", parameter={ VAR="x" } } }
const x:uint32;
